--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span></span>
             <embed type="application/pdf" src="./pdf/pdf_8.pdf" class="embed"/> -->
             <span></span>
-            <embed type="application/pdf" src="./pdf/pdf_all.pdf" class="embed"/>
+            <embed type="application/pdf" src="./pdf/algo-1.pdf" class="embed"/>
             <span></span>
         </div>
     </main>
