--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <span></span>
         <embed type="application/pdf" src="./pdf/pdf-1.pdf" class="embed" />
         <span></span>
+        <embed type="application/pdf" src="./pdf/pdf-2.pdf" class="embed" />
+        <span></span>
       </div>
     </main>
   </body>
