--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <main>
       <div class="container">
         <span></span>
-        <embed type="application/pdf" src="./pdf/pdf-1.pdf" class="embed" />
-        <span></span>
-        <embed type="application/pdf" src="./pdf/pdf-2.pdf" class="embed" />
+        <embed type="application/pdf" src="./pdf/test.pdf" class="embed" />
         <span></span>
       </div>
     </main>
