--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <span></span>
         <embed type="application/pdf" src="./pdf/test.pdf" class="embed" />
         <span></span>
+        <embed type="application/pdf" src="./pdf/test1.pdf" class="embed" />
+        <span></span>
+        <embed type="application/pdf" src="./pdf/test2.pdf" class="embed" />
+        <span></span>
       </div>
     </main>
   </body>
